# memsim

./: CMakeLists.txt  CMakePresets.json  README.md  oldgitignore
cmake/: memsim-config.cmake.in
examples/: CMakeLists.txt  multi_fidelity.cpp  simple_simulation.cpp
include/sw/memsim/: memsim.hpp
include/sw/memsim/core/: statistics.hpp  timing.hpp  types.hpp
include/sw/memsim/interface/: memory_controller.hpp  refresh_manager.hpp  scheduler.hpp
include/sw/memsim/scheduler/: fifo.hpp  fr_fcfs.hpp  fr_fcfs_grp.hpp
include/sw/memsim/technology/lpddr5/: lpddr5_controller.hpp
specs/hbm3/: hbm3-5600.json
specs/lpddr5/: lpddr5-6400.json
src/technology/: gddr7_controller.cpp  hbm3_controller.cpp  lpddr5_controller.cpp
src/util/: json_config.cpp  trace.cpp
tests/: CMakeLists.txt
tests/unit/: test_types.cpp
